src/test/ui/const_prop/issue-98444-const-index-out-of-bounds.stderr
error: this operation will panic at runtime
  --> $DIR/issue-98444-const-index-out-of-bounds.rs:7:13
   |
LL |     let _ = xs[7];
   |             ^^^^^ index out of bounds: the length is 5 but the index is 7
   |
   = note: `#[deny(unconditional_panic)]` on by default

error: aborting due to previous error

